--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mercadolibre-articulo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://aleervdnr.github.io/MercadolLibre-articulo/",
+  "homepage": "http://aleervdnr.github.io/MercadolLibre-articulo/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
